--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "flowbite-react": "^0.12.10",
+    "json-server": "^0.17.4",
     "next": "16.0.3",
     "react": "19.2.0",
     "react-dom": "19.2.0",
